--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -1,5 +1,5 @@
 .Menu {
-  background-color: lightskyblue;
+  background-color: rgb(243, 239, 28);
   display: flex;
   justify-content: space-between;
   align-items: center;
